add style fixes

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Document</title>
-    </head>
-    <body>
+    </head>     
+    <body>        
         <header class="header">
             <a class="header__logo" href="index.html">
                 <img class="header__logo-img" src="img/bonik-delivery-logo.svg">
@@ -27,10 +27,10 @@
         <main>
             <section class="main__delivery">
                 <div class="delivery__tracking-block">
-                    <article>
+                    <div>
                         <h2 class="delivery__title">Delivery is Process Going From Source Point to Predefined Destination.</h2>
                         <p class="delivery__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
-                    </article>
+                    </div>
                     <div class="delivery__tracking">
                         <input class="tracking__input" type="text" placeholder="Type your tracking number">
                         <button class="tracking__button" type="button">Track Percel</button>
@@ -43,73 +43,73 @@
                 >
             </section>
             <section class="main__about">
-                <article class="about__article">
+                <div class="about__div">
                     <h2 class="about__title">Why Choose Us?</h2>
                     <p class="about__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
-                </article>
+                </div>
                 <ul class="about__list list">
                     <li class="about__list-item list-item">
                         <img src="img/industry-leading-tech.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Industry-leading tech</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Industry-leading tech</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/nationwide-coverage.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Nationwide coverage</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Nationwide coverage</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/fastest-delivery.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Fastest Delivery</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Fastest Delivery</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/next-day-payment.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Next day payment</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Next day payment</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/best-cod-rates.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Best COD rates</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Best COD rates</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/secure-handling.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Secure handling</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Secure handling</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/product-insurance.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Product insurance</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Product insurance</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/verified-roducts.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Verified Products</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Verified Products</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                     <li class="about__list-item list-item">
                         <img src="img/realtime-monitoring.svg">
-                        <article class="item__article">
-                            <h2 class="item__article-title">Realtime Monitoring</h2>
-                            <p class="item__article-text">Delivery is process of transporting from source point to predefined destination.</p>
-                        </article>
+                        <div class="item__div">
+                            <h2 class="item__div-title">Realtime Monitoring</h2>
+                            <p class="item__div-text">Delivery is process of transporting from source point to predefined destination.</p>
+                        </div>
                     </li>
                 </ul>
             </section>
@@ -120,10 +120,10 @@
                     srcset="img/bonik-delivery-img-2-retina.png 2x"
                 >
                 <div class="apply__block">
-                    <article class="apply__block-artical">
+                    <div class="apply__block-artical">
                         <h2 class="apply__title">Apply for Ambassador</h2>
                         <p class="apply__text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
-                    </article>
+                    </div>
                     <button class="apply_button" type="button">Apply Now</button>
                 </div>
             </section>
@@ -134,8 +134,8 @@
                         <div class="news__header">
                             <img
                                 class="news__photo"
-                                src="img/article-1.png"
-                                srcset="img/article-1-retina.png 2x"
+                                src="img/div-1.png"
+                                srcset="img/div-1-retina.png 2x"
                             >
                             <div class="news__info">
                                 <p>UI / UX Design</p>
@@ -145,18 +145,18 @@
                                 </div>
                             </div>
                         </div>
-                        <article class="news__article">
+                        <div class="news__div">
                             <h2 class="news__subtitle">Our UX studio digitally transforms business through design</h2>
                             <p class="news__subtext">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
-                        </article>
+                        </div>
                         <img class="news_more" src="img/learn-more.svg">
                     </li>
                     <li class="news">
                         <div class="news__header">
                             <img
                                 class="news__photo"
-                                src="img/article-2.png"
-                                srcset="img/article-2-retina.png 2x"
+                                src="img/div-2.png"
+                                srcset="img/div-2-retina.png 2x"
                             >
                             <div class="news__info">
                                 <p>Apps Design</p>
@@ -166,18 +166,18 @@
                                 </div>
                             </div>
                         </div>
-                        <article class="news__article">
+                        <div class="news__div">
                             <h2 class="news__subtitle">Your customer do need comprehensive course to learn how to use your app.</h2>
                             <p class="news__subtext">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
-                        </article>
+                        </div>
                         <img class="news_more" src="img/learn-more.svg">
                     </li>
                     <li class="news">
                         <div class="news__header">
                             <img
                                 class="news__photo"
-                                src="img/article-3.png"
-                                srcset="img/article-3-retina.png 2x"
+                                src="img/div-3.png"
+                                srcset="img/div-3-retina.png 2x"
                             >
                             <div class="news__info">
                                 <p>Product Experience</p>
@@ -187,10 +187,10 @@
                                 </div>
                             </div>
                         </div>
-                        <article class="news__article">
+                        <div class="news__div">
                             <h2 class="news__subtitle">Scale your startup through exceptional product experience</h2>
                             <p class="news__subtext">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
-                        </article>
+                        </div>
                         <img class="news_more" src="img/learn-more.svg">
                     </li>
                 </ul>
