--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -29,12 +29,18 @@
                     <div class="page__track_textfield-text-big">
                         <b>Delivery is Process</b>
                     </div>
-                    <div class="page__track_textfield-text-big"><b>Going From Source Point to</b>
+                    <div class="page__track_textfield-text-big">
+                        <b>Going From Source Point to</b>
                     </div>
-                    <div class="page__track_textfield-text-big"><b>Predefined Destination</b>
+                    <div class="page__track_textfield-text-big">
+                        <b>Predefined Destination</b>
                     </div>
-                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
-                    <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
+                    <div class="page__track_textfield-text-small">
+                        <p>Need to send something on time? Delivery is process of transporting goods</p>
+                    </div>
+                    <div class="page__track_textfield-text-small">
+                        <p>from a source location to predefined destination</p>
+                    </div>
                     <form action="#" class="page__track_inputfield">
                         <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
                         <button type="button" class="page__track_inputfield-button">Track Parcel</button>
@@ -46,52 +52,54 @@
                 </picture>
             </section>
             <div class="page__title"><b>Why Choose Us?</b></div>
-            <div class="page__text">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
+            <div class="page__text">
+                <p>Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</p>
+            </div>
             <section class="page__offers">
-                <div class="page__offers-block page__offers-block-color--a">
+                <div class="page__offers-block page__offers-block-color--ffe4c4">
                     <div class="page__offers-block-img">
-                        <img src="images/1x/Group1.svg" alt="Industry-leading tech">
+                        <img src="images/1x/Group1.svg" alt="Industry-leading tech" class="page__offers-block-img">
                     </div>
                     <h2>Industry-leading tech</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--b">
+                <div class="page__offers-block page__offers-block-color--ecedff">
                     <img src="images/1x/Group2.svg" alt="Nationwide coverage" class="page__offers-block-img">
                     <h2>Nationwide coverage</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--c">
+                <div class="page__offers-block page__offers-block-color--90cfcf">
                     <img src="images/1x/Group3.svg" alt="Fastest delivery" class="page__offers-block-img">
                     <h2>Fastest delivery</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--b">
+                <div class="page__offers-block page__offers-block-color--ecedff">
                     <img src="images/1x/Group4.svg" alt="Next day payment" class="page__offers-block-img">
                     <h2>Next day payment</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--c">
+                <div class="page__offers-block page__offers-block-color--90cfcf">
                     <img src="images/1x/Group5.svg" alt="Best COD rated" class="page__offers-block-img">
                     <h2>Best COD rated</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--a">
+                <div class="page__offers-block page__offers-block-color--ffe4c4">
                     <img src="images/1x/Group6.svg" alt="Secure handling" class="page__offers-block-img">
                     <h2>Secure handling</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--c">
+                <div class="page__offers-block page__offers-block-color--90cfcf">
                     <img src="images/1x/Group7.svg" alt="Product insurance" class="page__offers-block-img">
                     <h2>Product insurance</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--a">
+                <div class="page__offers-block page__offers-block-color--ffe4c4">
                     <img src="images/1x/Group8.svg" alt="Verified products" class="page__offers-block-img">
                     <h2>Verified products</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--b">
-                    <img src="images/1x/Group5.svg" alt="Reatime Monitoring" class="page__offers-block-img">
+                <div class="page__offers-block page__offers-block-color--ecedff">
+                    <img src="images/1x/Group10.svg" alt="Reatime Monitoring" class="page__offers-block-img">
                     <h2>Reatime Monitoring</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
@@ -115,17 +123,17 @@
                         <img src="images/1x/Laptop-Coffee_1x.png" alt="laptop">
                     </picture>
                     <div class="page__news-block-signature">
-                        UI/UX design
+                        <p>UI/UX design</p>
                         <div class="page__news-block-signature-right">
                             <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
-                            12450
+                            <p>12450</p>
                         </div>
                     </div>
                     <div class="page__news-block-big">
-                        <b>Our UX Studio digitally transforms</b>
+                        <p><b>Our UX Studio digitally transforms</b></p>
                     </div>
                     <div class="page__news-block-big">
-                        <b>business through design</b>
+                        <p><b>business through design</b></p>
                     </div>
                     <p class="page__news-block-text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</p>
                     <p>
@@ -138,17 +146,17 @@
                         <img src="images/1x/Laptop_1x.png" alt="laptop">
                     </picture>
                     <div class="page__news-block-signature">
-                        Apps design
+                        <p>Apps design</p>
                         <div class="page__news-block-signature-right">
                             <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
-                            2953
+                            <p>2953</p>
                         </div>
                     </div>
                     <div class="page__news-block-big">
-                        <b>Your customer do need comprehensive</b>
+                        <p><b>Your customer do need comprehensive</b></p>
                     </div>
                     <div class="page__news-block-big">
-                        <b>course to learn how to use your app.</b>
+                       <p><b>course to learn how to use your app.</b></p>
                     </div>
                     <p class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</p>
                     <p>
@@ -161,17 +169,17 @@
                         <img src="images/1x/Phone_1x.png" alt="Iphone">
                     </picture>
                     <div class="page__news-block-signature">
-                        Product experience
+                        <p>Product experience</p>
                         <div class="page__news-block-signature-right">
                             <img src="images/1x/Vector.png" alt="eye" class="page__news-block-signature-img">
-                            7980
+                            <p>7980</p>
                         </div>
                     </div>
                     <div class="page__news-block-big">
-                        <b>Scale your startup through exceptional</b>
+                        <p><b>Scale your startup through exceptional</b></p>
                     </div>
                     <div class="page__news-block-big">
-                        <b>product experience</b>
+                        <p><b>product experience</b></p>
                     </div>
                     <p class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</p>
                     <p>
