--- a/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
@@ -16,10 +16,10 @@
             </div>
             <div class="header__info">
                 <div class="header__info-number-phone">
-                    <svg class="phone">
-                        <use xlink:href="#phone"></use>
-                    </svg>
                     <a class="header__info-number-phone_input" href="tel:+08801877576457">
+                        <svg class="phone">
+                            <use xlink:href="#phone"></use>
+                        </svg>
                         +08801877576457
                     </a>
                 </div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="apply__for-ambassador">
                     <div class="main__text-head">Apply for Ambassador</div>
-                    <div class="apply__for-ambassador_text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</div>
+                    <div class="apply__for-ambassador-text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</div>
                     <button class="apply__for-ambassador_btn" type="button">Apply Now</button>
                 </div>
             </div>
@@ -128,18 +128,18 @@
                     <h3 class="main__text-head main__text-head--news-head">Company News Our Latest Artical & Tips for You</h3>
                 </div>
                 <div class="news__list">
-                    <div class="news__list_card">
-                        <picture class="news__list_picture">
+                    <div class="news__list-card">
+                        <picture class="news__list-picture">
                             <source srcset="images/Rectangle_21_2x.png 2x">
                             <img class="news__list_img" src="images/Rectangle_21.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
-                            <p class="card__product_text">UI / UX Design</p>
-                            <div class="card__product_views">
+                            <p class="card__product-text">UI / UX Design</p>
+                            <div class="card__product-views">
                                 <svg class="eye">
                                     <use xlink:href="#eye"></use>
                                 </svg>
-                                <p class="card__product_text">12450</p>
+                                <p class="card__product-text">12450</p>
                             </div>
                         </div>
                         <div class="card__text">
@@ -149,24 +149,26 @@
                             <p class="card__paragraph">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
                         </div>
                         <div class="card__learn-more">
-                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
-                            <svg class="arrow">
-                                <use xlink:href="#arrow"></use>
-                            </svg>
+                            <a class="card__learn-more_link" href="#Learn">
+                                Learn More
+                                <svg class="arrow">
+                                    <use xlink:href="#arrow"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
-                    <div class="news__list_card">
-                        <picture class="news__list_picture">
+                    <div class="news__list-card">
+                        <picture class="news__list-picture">
                             <source srcset="images/Rectangle_22_2x.png 2x">
-                            <img class="news__list_img" src="images/Rectangle_22.png" alt="bonik delivery products">
+                            <img class="news__list-img" src="images/Rectangle_22.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
-                            <p class="card__product_text">Apps Design</p>
-                            <div class="card__product_views">
+                            <p class="card__product-text">Apps Design</p>
+                            <div class="card__product-views">
                                 <svg class="eye">
                                     <use xlink:href="#eye"></use>
                                 </svg>
-                                <p class="card__product_text">2953</p>
+                                <p class="card__product-text">2953</p>
                             </div>
                         </div>
                         <div class="card__text">
@@ -176,24 +178,26 @@
                             <p class="card__paragraph">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
                         </div>
                         <div class="card__learn-more">
-                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
-                            <svg class="arrow">
-                                <use xlink:href="#arrow"></use>
-                            </svg>
+                            <a class="card__learn-more_link" href="#Learn">
+                                Learn More
+                                <svg class="arrow">
+                                    <use xlink:href="#arrow"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
-                    <div class="news__list_card">
-                        <picture class="news__list_picture">
+                    <div class="news__list-card">
+                        <picture class="news__list-picture">
                             <source srcset="images/Rectangle_20_2x.png 2x">
-                            <img class="news__list_img" src="images/Rectangle_20.png" alt="bonik delivery products">
+                            <img class="news__list-img" src="images/Rectangle_20.png" alt="bonik delivery products">
                         </picture>
                         <div class="card__product">
-                            <p class="card__product_text">Product Experience</p>
-                            <div class="card__product_views">
+                            <p class="card__product-text">Product Experience</p>
+                            <div class="card__product-views">
                                 <svg class="eye">
                                     <use xlink:href="#eye"></use>
                                 </svg>
-                                <p class="card__product_text">7980</p>
+                                <p class="card__product-text">7980</p>
                             </div>
                         </div>
                         <div class="card__text">
@@ -203,10 +207,12 @@
                             <p class="card__paragraph">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
                         </div>
                         <div class="card__learn-more">
-                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
-                            <svg class="arrow">
-                                <use xlink:href="#arrow"></use>
-                            </svg>
+                            <a class="card__learn-more_link" href="#Learn">
+                                Learn More
+                                <svg class="arrow">
+                                    <use xlink:href="#arrow"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -239,11 +245,11 @@
         </main>
         <footer class="footer">
             <div class="footer__logo">
-                <img class="footer__logo_img" src="images/bonik_delivery_logo.svg" alt="logo">
-                <div class="footer__logo_text">10/B, House# 32, Dhaka Uddan
+                <img class="footer__logo-img" src="images/bonik_delivery_logo.svg" alt="logo">
+                <div class="footer__logo-text">10/B, House# 32, Dhaka Uddan
                     Mohammadpur, Dhaka, Bangladesh
                 </div>
-                <div class="footer__logo_social-link">
+                <div class="footer__logo-social-link">
                     <a href="http://www.facebook.com">
                         <svg class="footer__social-icon">
                             <use xlink:href="#facebook"></use>
@@ -274,39 +280,39 @@
             <div class="footer__important-links">
                 <h4 class="footer__head">Important links</h4>
                 <ul class="footer__list">
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#FAQs">FAQs</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#FAQs">FAQs</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Blogs">Blogs</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Blogs">Blogs</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Privacy Policy">Privacy Policy</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Privacy Policy">Privacy Policy</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Trims & Conditions">Trims & Conditions</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Trims & Conditions">Trims & Conditions</a>
                     </li>
                 </ul>
             </div>
             <div class="footer__policy">
                 <h4 class="footer__head">Policy</h4>
                 <ul class="footer__list">
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Learner">Learner</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Learner">Learner</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Partners">Partners</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Partners">Partners</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Developers">Developers</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Developers">Developers</a>
                     </li>
-                    <li class="footer__list_unit">
-                        <a class="footer__list_link" href="#Teaching Centre">Teaching Centre</a>
+                    <li class="footer__list-unit">
+                        <a class="footer__list-link" href="#Teaching Centre">Teaching Centre</a>
                     </li>
                 </ul>
             </div>
             <div class="footer__copyright">
-                <p class="footer__copyright_text">Copyright @2021 Bonik Delivery</p>
+                <p class="footer__copyright-text">Copyright @2021 Bonik Delivery</p>
             </div>
         </footer>
 
