--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/index.html
@@ -15,22 +15,22 @@
             </div>
             <ul class="gallery">
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/1.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/1.jpg" alt="Gallery image" width="360px">
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/2.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/2.jpg" alt="Gallery image" width="360px">
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/3.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/3.jpg" alt="Gallery image" width="360px">
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/4.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/4.jpg" alt="Gallery image" width="360px">
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/5.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/5.jpg" alt="Gallery image" width="360px">
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" src="../src/images/6.jpg" alt="Gallery image">
+                    <img class="gallery__image" src="../src/images/6.jpg" alt="Gallery image" width="360px">
                 </li>
             </ul>
             <input class="btn-add-file" type="file">
